--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: David Padilla : Engineer, Manager, Rubyist, Speaker
+title: "David Padilla : Engineer, Manager, Rubyist, Speaker"
 email: david@padilla.cc
 description: > # this means to ignore newlines until "baseurl:"
   This is the personal website of David Padilla.
