--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,8 @@
 title: "David Padilla : Engineer, Manager, Rubyist, Speaker"
 email: david@padilla.cc
 description: > # this means to ignore newlines until "baseurl:"
-  This is the personal website of David Padilla.
+  This is the personal website of David Padilla. I am a Ruby on Rails Engineer,
+  but I have also been CEO. I can manage teams as well as be a member of one.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://david.padilla.cc" # the base hostname & protocol for your site
 twitter_username: dabit
