--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,14 @@
 title: "David Padilla : Engineer, Manager, Rubyist, Speaker"
 email: david@padilla.cc
 description: > # this means to ignore newlines until "baseurl:"
-  This is the personal website of David Padilla. I am a Ruby on Rails Engineer,
-  but I have also been CEO. I can manage teams as well as be a member of one.
+  This is the personal website of David Padilla.
+  I have been writing software for almost 15 years now.
+  My current weapon of choice is Ruby, Rails and everything related to it.
+  I ran Crowd Interactive, a Software Development consultancy,
+  for almost 5 years. While doing so I sent more than a
+  few websites to production and helped keeping them operational
+  when traffic really picked up. I enjoy sharing the word by organizing
+  local community events and speaking at conferences all around the world.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://david.padilla.cc" # the base hostname & protocol for your site
 twitter_username: dabit
